can: Implement embedded-hal filter traits

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ version = "0.2.2"
 
 [dependencies.embedded-hal]
 git = "https://github.com/timokroeger/embedded-hal"
-branch = "can-v0.2.x"
+branch = "can-filter-v0.2.x"
 version = "0.2.4"
 features = ["unproven"]
 
